Add ajax to cart

--- a/app/views/books/_book.html.haml
+++ b/app/views/books/_book.html.haml
@@ -1,10 +1,11 @@
-%h2 Your Cart
+- unless book.line_items.empty?
+  %h2 Your Cart
 
-%table
-  = render(book.line_items)
+  %table
+    = render(book.line_items)
 
-  %tr.total_line
-    %td{colspan: "2"} Total
-    %td.total_cell= number_to_currency(book.total_price)
+    %tr.total_line
+      %td{colspan: "2"} Total
+      %td.total_cell= number_to_currency(book.total_price)
 
-= button_to 'Empty cart', book, method: :delete, data: { confirm: 'Are you sure?' }
+  = button_to 'Empty cart', book, method: :delete, data: { confirm: 'Are you sure?' }
