--- a/app/views/line_items/_line_item.html.haml
+++ b/app/views/line_items/_line_item.html.haml
@@ -1,4 +1,10 @@
-%tr
+- if line_item == @current_item
+  %tr#current_item
+- else
+  %tr
+
+%tr{id: "#{'current_item' if line_item == @current_item}"}
+
   %td= line_item.quantity
   %td= line_item.product.title
   %td.item_price= number_to_currency(line_item.total_price)
