--- a/app/views/books/new.html.haml
+++ b/app/views/books/new.html.haml
@@ -1,5 +1,8 @@
 %h1 New book
 
-= render 'form'
+-#= render 'form'
+-#
+-#= link_to 'Back', books_path
 
-= link_to 'Back', books_path
+
+= link_to 'Place Order', '#'
