--- a/app/views/admin/products/show.haml
+++ b/app/views/admin/products/show.haml
@@ -32,9 +32,9 @@
 %p
   %b Building:
   = @product.building.btype
-- if current_user
-  = link_to 'Edit', edit_admin_product_path(@product)
-  \|
-= link_to 'Order', new_book_path
+
+= link_to 'Edit', edit_admin_product_path(@product)
 \|
-= link_to 'Back', root_path
+= link_to 'Delete', admin_product_path(@product), method: :delete, data: { confirm: 'Are you sure?' }
+\|
+= link_to 'Back', admin_products_path
