--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -8,3 +8,9 @@
         %span.icon-bar
         %span.icon-bar
       %a.navbar-brand{:href => "/"} 2sport
+
+      - if current_user
+        = link_to 'Admin panel', admin_dashboard_index_path
+        = render 'common/logout_link'
+
+
