--- a/app/views/store/index.html.haml
+++ b/app/views/store/index.html.haml
@@ -27,10 +27,10 @@
                       = product.size.height
                   .sportground_info
                     %h4.pull-right Цена от #{product.price}руб./ч.
-
-                .manage_links
-                  = link_to 'Edit', edit_product_path(product), class: "btn btn-default"
-                  = link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-default"
+                - if current_user
+                  .manage_links
+                    = link_to 'Edit', edit_admin_product_path(product), class: "btn btn-default"
+                    = link_to 'Destroy', admin_product_path(product), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-default"
 
   .col-md-2
 
