--- a/app/views/admin/products/index.haml
+++ b/app/views/admin/products/index.haml
@@ -28,11 +28,11 @@
         = product.location.address
       %b
         Size:
-        = product.size.width
+        = product.length
         \x
-        = product.size.length
+        = product.width
         \x
-        = product.size.height
+        = product.height
       %b
         Cover:
         = product.cover.ctype
