--- a/app/views/books/_book.html.haml
+++ b/app/views/books/_book.html.haml
@@ -21,11 +21,11 @@
   = @book.product.location.address
 %p
   %b Size:
-  = @book.product.size.width
+  = @book.product.length
   \x
-  = @book.product.size.length
+  = @book.product.width
   \x
-  = @book.product.size.height
+  = @book.product.height
 %p
   %b Cover:
   = @book.product.cover.ctype
