--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -21,11 +21,11 @@
   = @product.location.address
 %p
   %b Size:
-  = @product.size.width
+  = product.length
   \x
-  = @product.size.length
+  = product.width
   \x
-  = @product.size.height
+  = product.height
 %p
   %b Cover:
   = @product.cover.ctype
