--- a/app/views/store/index.html.haml
+++ b/app/views/store/index.html.haml
@@ -22,9 +22,11 @@
                     %p
                       = product.cover.ctype
                     %p
-                      = product.size.width
-                      = product.size.length
-                      = product.size.height
+                      = product.length
+                      \x
+                      = product.width
+                      \x
+                      = product.height
                   .sportground_info
                     %h4.pull-right Цена от #{product.price}руб./ч.
                 - if current_user
@@ -59,7 +61,7 @@
 /         %td= product.working_hours
 /         %td= product.category.title
 /         %td= product.location
-/         %td= product.size.width
+/         %td= product.width
 /         %td= product.cover.ctype
 /         %td= product.building
 /         %td= link_to 'Show', product
