--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,16 +1,25 @@
-%nav.navbar.navbar-default
-  .container
-    / Brand and toggle get grouped for better mobile display
-    .navbar-header
-      %button.navbar-toggle.collapsed{"aria-expanded" => "false", "data-target" => "#bs-example-navbar-collapse-1", "data-toggle" => "collapse", :type => "button"}
-        %span.sr-only Toggle navigation
-        %span.icon-bar
-        %span.icon-bar
-        %span.icon-bar
-      %a.navbar-brand{:href => "/"} 2sport
+%header
+  .main-wrapper
+    %nav.navbar.navbar-default
+      .container
+        / Brand and toggle get grouped for better mobile display
+        .navbar-header
+          %button.navbar-toggle.collapsed{"aria-expanded" => "false", "data-target" => "#bs-example-navbar-collapse-1", "data-toggle" => "collapse", :type => "button"}
+            %span.sr-only Toggle navigation
+            %span.icon-bar
+            %span.icon-bar
+            %span.icon-bar
+          %a.navbar-brand{:href => "/"} 2sport
 
-      - if current_user
-        = link_to 'Admin panel', admin_dashboard_index_path
-        = render 'common/logout_link'
+          - if current_user
+            = link_to 'Admin panel', admin_dashboard_index_path
+            = render 'common/logout_link'
 
 
+    .container
+      .search_input
+        .input-group.col-md-12
+          %input.search-query.form-control{placeholder: "Введите название спортивного объекта", type: "text"}
+          %span.input-group-btn
+            %button.btn.btn-danger{:type => "button"}
+              %span.glyphicon.glyphicon-search
