--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -19,7 +19,7 @@
     .container
       .search_input
         .input-group.col-md-12
-          %input.search-query.form-control{placeholder: "Введите название спортивного объекта", type: "text"}
+          %input#search-query.form-control{placeholder: "Введите название спортивного объекта", type: "text"}
           %span.input-group-btn
-            %button.btn.btn-danger{:type => "button"}
+            %button.btn.btn-danger{type: "button"}
               %span.glyphicon.glyphicon-search
