--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,3 +18,5 @@
 
     .container
       = yield
+
+    %script{:src => "//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js", :type => "text/javascript"}
