--- a/app/views/admin/products/index.haml
+++ b/app/views/admin/products/index.haml
@@ -17,7 +17,8 @@
         = product.price
       %b
         Working hours:
-        = product.working_hours
+        = product.start_working
+        = product.end_working
       %b
         Category:
         = product.category.title
