--- a/app/views/admin/products/show.haml
+++ b/app/views/admin/products/show.haml
@@ -10,7 +10,8 @@
   = @product.price
 %p
   %b Working hours:
-  = @product.working_hours
+  = @product.start_working
+  = @product.end_working
 %p
   %b Category:
   = @product.category.title
