--- a/app/views/books/_book.html.haml
+++ b/app/views/books/_book.html.haml
@@ -1,34 +1,1 @@
-%p#notice= notice
-
-%h1
-  = @book.product.title
-%p
-  %b Description:
-  = @book.product.description
-%p
-  %b Price:
-  = @book.product.price
-%p
-  %b Working hours:
-  = @book.product.working_hours
-%p
-  %b Category:
-  = @book.product.category.title
-%p
-  %b Location:
-  = @book.product.location.country.title
-  = @book.product.location.city.title
-  = @book.product.location.address
-%p
-  %b Size:
-  = @book.product.length
-  \x
-  = @book.product.width
-  \x
-  = @book.product.height
-%p
-  %b Cover:
-  = @book.product.cover.ctype
-%p
-  %b Building:
-  = @book.product.building.btype
+Ваша бронь принята. Спасибо!
