--- a/app/views/admin/dashboard/_header.haml
+++ b/app/views/admin/dashboard/_header.haml
@@ -11,6 +11,7 @@
       = link_to 'Dashboard', admin_dashboard_index_path
       = link_to 'Products', admin_products_path
       = link_to 'Categories', admin_categories_path
+      = link_to 'Заказы', admin_books_path
       = link_to 'Back to site', root_path
 
       = render 'common/logout_link'
