add styles for book time table

--- a/app/assets/stylesheets/modules/buttons.sass
+++ b/app/assets/stylesheets/modules/buttons.sass
@@ -1,9 +1,16 @@
 .btn
   &.order
     color: #fff
-    background-color: #5fc44d
-    border: 2px solid #5fc44d
+    background-color: #203448
+    border: 2px solid #203448
     border-radius: 0
     font-size: 20px
     padding: 10px 20px
     min-width: 110px
+    -webkit-backface-visibility: hidden
+    transition: .3s
+    float: right
+
+    &:hover
+      background-color: #fff
+      color: #203448
