--- a/app/views/books/new.html.haml
+++ b/app/views/books/new.html.haml
@@ -3,27 +3,28 @@
 = render '/products/product', product: @product
 
 = form_for [@product, @book] do |f|
-  %table
-    %tr
-      = f.label :comment
-      = f.text_area :comment
-      %br
+  .book_wrapper
+    = f.label :comment
+    = f.text_area :comment, class: "form-control"
+    %br
 
-      = f.label :name
-      = f.text_field :name
+    = f.label :name
+    = f.text_field :name, class: "form-control"
 
+    .book_time_table
       - @product.seven_days.to_a.each do |day|
-        %td
-          %br
+        .book_day_wrapper
+          .book_day_title
             = day
           - @product.working_hours.times do |i|
-            %br
-              = f.fields_for :reservations, f.object.reservations.new do |reservation_field|
+            = f.fields_for :reservations, f.object.reservations.new do |reservation_field|
+              %label.book_time
                 = reservation_field.hidden_field :product_id, value: @product.id
-                = reservation_field.label time_cell(@product.start_working, i)
                 = reservation_field.check_box :time, { class: '' }, "#{day} #{@product.start_working + i.hours}", nil
+                %i.glyphicon.glyphicon-ok
+                = content_tag :span, time_cell(@product.start_working, i)
 
-  = f.submit 'Разместить заказ'
+  = f.submit 'Разместить заказ', class: 'btn order'
 -#= f.hidden_field :year
 -#= f.hidden_field :month
 -#= f.hidden_field :day
