--- a/app/assets/stylesheets/books.sass
+++ b/app/assets/stylesheets/books.sass
@@ -1,3 +1,8 @@
+.book_time_wrapper
+  background: #f7f7f7
+  padding-top: 1px
+  margin-bottom: 15px
+
 .book_time_table
   display: flex
   justify-content: space-between
@@ -24,6 +29,7 @@
   overflow: hidden
   min-width: 130px
   text-align: center
+  background: #fff
 
   i.glyphicon.glyphicon-ok
     display: none
@@ -47,3 +53,6 @@
     width: 0
     height: 0
     margin: 0
+
+.book_info
+  padding-bottom: 15px
