--- a/app/assets/stylesheets/modules/base.sass
+++ b/app/assets/stylesheets/modules/base.sass
@@ -1,4 +1,4 @@
-.product_wrapper
+.product_wrapper, .book_wrapper
   padding-bottom: 50px
 
   h1
@@ -27,3 +27,11 @@ div[class^="filter_"]
 
   label
     font-weight: 400
+
+
+.product_desctiption_title
+  p 
+    font-weight: bold
+    
+    span
+      font-weight: normal
