--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,7 +16,8 @@
     -#    = hidden_div_if(@book.empty?, id: 'book') do
     -#      = render @book
 
-    .container
-      = yield
+    .container-fluid
+      .row
+        = yield
 
     %script{:src => "//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js", :type => "text/javascript"}
