--- a/app/views/admin/products/edit.haml
+++ b/app/views/admin/products/edit.haml
@@ -4,4 +4,4 @@
 
 = link_to 'Show', @product, class: "btn btn-default"
 \|
-= link_to 'Back', products_path, class: "btn btn-default"
+= link_to 'Back', admin_products_path, class: "btn btn-default"
