--- a/app/views/books/new.html.haml
+++ b/app/views/books/new.html.haml
@@ -2,6 +2,11 @@
   = form_for [@product, @book] do |f|
     .book_info.container.clearfix
       %h1 Оформление заказа
+      .container
+        - if @book.errors.any?
+          - @book.errors.full_messages.each do |error|
+            = error
+            %br
       .col-md-6
         .row
           = render '/products/product', product: @product
@@ -11,6 +16,9 @@
           %p
             %label Как вас зовут?
             = f.text_field :name, class: "form-control", placeholder: "Имя"
+          %p
+            %label Ваш email?
+            = f.text_field :email, class: "form-control", placeholder: "Email"
           %p
             %label Вы можете оставить комментарий.
             = f.text_area :comment, class: "form-control", placeholder: "Комментарий"
@@ -27,16 +35,9 @@
               = f.fields_for :reservations, f.object.reservations.new do |reservation_field|
                 %label.book_time
                   = reservation_field.hidden_field :product_id, value: @product.id
-                  = reservation_field.check_box :time, { class: '' }, "#{day} #{@product.start_working + i.hours}", nil
+                  = reservation_field.check_box :time, { disabled: unavailable_time?(day, time_cell(@product.start_working, i)) }, "#{day} #{@product.start_working + i.hours}", nil
                   %i.glyphicon.glyphicon-ok
                   = content_tag :span, time_cell(@product.start_working, i)
 
     .container
       = f.submit 'Разместить заказ', class: 'btn order'
--#= f.hidden_field :year
--#= f.hidden_field :month
--#= f.hidden_field :day
--#= f.hidden_field :hours
--#= f.hidden_field :minutes
--#
-
