--- a/app/views/admin/products/_form.haml
+++ b/app/views/admin/products/_form.haml
@@ -1,4 +1,4 @@
-= form_for [:admin, @product] do |f|
+= form_for [:admin, @product], html: { multipart: true } do |f|
   - if @product.errors.any?
     #error_explanation
       %h2= "#{pluralize(@product.errors.count, 'error')} prohibited this product from being saved:"
@@ -63,5 +63,8 @@
       = f.label :building
       = f.fields_for :building, object(@product, 'building') do |btype_fields|
         = btype_fields.text_field :btype, class: 'form-control'
+
+      = f.label :image
+      = file_field_tag 'images[]', type: :file, multiple: true
     .actions
       = f.submit 'Save', class: 'btn btn-default'
