--- a/app/views/admin/products/show.haml
+++ b/app/views/admin/products/show.haml
@@ -33,6 +33,10 @@
 %p
   %b Building:
   = @product.building.btype
+%p
+  %b Images
+  - @product.attachments.each do |attachment|
+    = image_tag attachment.image, width: 200
 
 = link_to 'Edit', edit_admin_product_path(@product)
 \|
